The provided diff indicates that the codebase has undergone a series of modifications to replace Java's `Date` class with more modern date and time classes from the `java.time` package. The changes are extensive, affecting multiple files and various methods within those files. Here's a summary of the key changes:
1. **Removal of `java.util.Date` and `java.text.SimpleDateFormat`:**
   - Replaced `java.util.Date` with `java.time.LocalDate`, `java.time.LocalDateTime`, or `java.time.ZonedDateTime`.
   - Replaced `java.text.SimpleDateFormat` with `java.time.format.DateTimeFormatter`.

2. **Modification of Methods:**
   - Methods that previously returned or accepted `Date` objects now return or accept `LocalDate`, `LocalDateTime`, or `ZonedDateTime` objects.
   - Methods that used `Date` for date-time operations now use `LocalDate`, `LocalDateTime`, or `ZonedDateTime`.

3. **Removal of `MMLDate` Utility Class:**
   - The `MMLDate` utility class, which was used for date-time conversions, has been removed or replaced with direct `java.time` operations.

4. **Adjustments in Queries and Specifications:**
   - Queries and specifications that used `Date` for date-time filtering now use `LocalDate` or `LocalDateTime`.

5. **Changes in Data Models:**
   - Fields and methods in data models that previously used `Date` have been updated to use `LocalDate` or `LocalDateTime`.

6. **Consistency and Readability Improvements:**
   - The codebase now uses more consistent and readable date-time operations provided by `java.time`.

### Example Changes

#### 1. **Date to LocalDate Conversion:**
   - Before:
     ```java
     LocalDate localDate = MMLDate.toLocalDateFromDate(date); // bridge
     ```
   - After:
     ```java
     LocalDate localDate = DateUtils.toLocalDateFromIsoDate(date);
     ```

#### 2. **Date to LocalDateTime Conversion:**
   - Before:
     ```java
     LocalDateTime localDateTime = MMLDate.toLocalDateTimeFromDate(doc.getDocInfo().getConfirmDate()); // bridge
     ```
